dataset1235/2025-2/1153765216/users/1370515670/executions/2814675586_593159971.log
== RUN (2025-08-26 19:22:47)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = import (nota1 + nota2 + not3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 4
    media = import (nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 4
    media = import (nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 4
    media = import (nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 4
    media = import (nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 4
    media = import (nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 4
    media = import (nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:23:00)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = import(nota1 + nota2 + not3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:24:25)
-- CODE: 
nota1 = float(input())
nota2 = float(input())

media = (nota1 + nota2) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
3.8333333333333335
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
5.866666666666667
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
3.3333333333333335
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
6.066666666666666
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
1.6666666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:34:59)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = ImportWarning(nota1 + nota2 + notas3)/ 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:23:00)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = import(nota1 + nota2 + not3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:23:01)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = import(nota1 + nota2 + not3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 4
    media = import(nota1 + nota2 + not3) / 3
            ^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:34:58)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = ImportWarning(nota1 + nota2 + notas3)/ 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ImportWarning(nota1 + nota2 + notas3)/ 3
                                          ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:33:09)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = (nota1 + nota2 + notas3)/ 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3)/ 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3)/ 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3)/ 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3)/ 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3)/ 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3)/ 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
